    - allow both links in Preview and clicking in Preview to reposition CV
    - fix new cursor repositioning under new tab ala Spellcheck
    - fix prettyprinting of the mark tag in gumbo and sigil_bs4
    - fix crash when tagname illegally (for xhtml) includes single or double quotes
    - fix crash in Reports for non-wellformed xhtml that was okay under html5

   New Features
    - update official builds to use Qt 5.11.1 and Python 3.7
    - update internal Python modules to use latest versions
    - give Windows users option to bypass the installation of VC runtime altogether during install
      (for rare situations where the bundled runtime seems to break previously installed versions)

   Changes
    - Support for Windows Vista officially ends ... Win7sp1 is official minimum required Windows
      The unofficial Legacy Windows version of Sigil will be available to XP and Vista users


Sigil-0.9.10
   Bug Fixes
    - Fix signal handling to prevent double launch of plugins immediately after plugin installed
    - Fixed incorrect named entity tooltips for many of the Insert-> Special Characters
    - Fixed lack of recognition of woff2 fonts inside Sigil and for plugins
    - Fix segfault when .xml is first file in BookBrowser and add new html or split at cursor is invoked
    - Fix bug that allowed multiple audio/video tabas of the same resource to be opened
    - Fix plugin related bug when adding/removing last xhtml file
    - Fix Text Direction setting inside body to use structural dir attribute under epub3
    - Fix duplicate group-position property in epub3 MetaData Editor
    - Use absolute path references when first opening Sigil with an ebook so that Open Recent works better
    - Fix "issue" in handling self-closing script tags in head (similar issue that we had with self-closing title tags)
    - Fix issue converting Qt Strings to their Python equivalent when outside the BMP